Configured to local STS Identity Provider

--- a/source/WebHost/Configuration/autofac.config
+++ b/source/WebHost/Configuration/autofac.config
@@ -5,11 +5,11 @@
 				   service="Thinktecture.AuthorizationServer.Interfaces.IResourceOwnerCredentialValidation, Thinktecture.AuthorizationServer.Core" >
 			<parameters>
 				<parameter name="address"
-						   value="https://idsrv.local/issue/wstrust/mixed/username" />
+						   value="http://localhost/issue/wstrust/mixed/username" />
 				<parameter name="realm"
 						   value="urn:authorizationserver" />
 				<parameter name="issuerThumbprint"
-						   value="973E8A633185A3A3E88B00B415CF9CBA608BA5F8" />
+						   value="9175D0CC56436CC48C790A520D048DD1C5129CC7" />
 			</parameters>
 		</component>
 
