--- a/source/WebHost/Configuration/identityModel.config
+++ b/source/WebHost/Configuration/identityModel.config
@@ -8,11 +8,11 @@
 		<issuerNameRegistry type="System.IdentityModel.Tokens.ValidatingIssuerNameRegistry, System.IdentityModel.Tokens.ValidatingIssuerNameRegistry">
 			<authority name="IdP">
 				<keys>
-					<add thumbprint="973E8A633185A3A3E88B00B415CF9CBA608BA5F8" />
-					<add thumbprint="65996154AD39783393A90E5791405D1ECD6940E9" />
+					<!--<add thumbprint="ECE75834B2BFA159AEA634F974B4E6DAEEFA0D69" />-->
+					<add thumbprint="9175D0CC56436CC48C790A520D048DD1C5129CC7" />
 				</keys>
 				<validIssuers>
-					<add name="http://identityserver.v2.thinktecture.com/samples" />
+					<add name="http://identityserver.v2.thinktecture.com/trust/hsrtest" />
 				</validIssuers>
 			</authority>
 		</issuerNameRegistry>
