--- a/source/WebHost/Configuration/identityModel.services.config
+++ b/source/WebHost/Configuration/identityModel.services.config
@@ -2,7 +2,7 @@
   <federationConfiguration>
     
     <wsFederation passiveRedirectEnabled="true"
-                  issuer="https://idsrv.local/issue/wsfed"
+                  issuer="https://localhost/issue/wsfed"
                   realm="urn:authorizationserver" />
  
   </federationConfiguration>
