--- a/source/WebHost/Web.config
+++ b/source/WebHost/Web.config
@@ -1,136 +1,158 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="system.identityModel"
-      type="System.IdentityModel.Configuration.SystemIdentityModelSection, System.IdentityModel, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-    <section name="system.identityModel.services"
-      type="System.IdentityModel.Services.Configuration.SystemIdentityModelServicesSection, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-    <section name="autofac" type="Autofac.Configuration.SectionHandler, Autofac.Configuration"/>
+    <section name="system.identityModel" type="System.IdentityModel.Configuration.SystemIdentityModelSection, System.IdentityModel, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
+    <section name="system.identityModel.services" type="System.IdentityModel.Services.Configuration.SystemIdentityModelServicesSection, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
+    <section name="autofac" type="Autofac.Configuration.SectionHandler, Autofac.Configuration" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework"
-      type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-      requirePermission="false"/>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
-  <system.identityModel configSource="configuration\identityModel.config"/>
-  <system.identityModel.services configSource="configuration\identityModel.services.config"/>
-  <system.diagnostics configSource="configuration\tracing.config"/>
-  <autofac configSource="configuration\autofac.config"/>
+  <system.identityModel>
+    <identityConfiguration>
+      <audienceUris>
+        <add value="https://localhost:44301/" />
+      </audienceUris>
+      <!--Commented by Identity and Access VS Package-->
+      <!--<issuerNameRegistry type="System.IdentityModel.Tokens.ValidatingIssuerNameRegistry, System.IdentityModel.Tokens.ValidatingIssuerNameRegistry"><authority name="http://localhost:1502/STSWebSite/"><keys><add thumbprint="ED08AB32C17D06D3CBE3529CDD6F67BA8265505F" /></keys><validIssuers><add name="http://localhost:1502/STSWebSite/" /></validIssuers></authority></issuerNameRegistry>-->
+      <!--certificationValidationMode set to "None" by the the Identity and Access Tool for Visual Studio. For development purposes.-->
+      <certificateValidation certificateValidationMode="None" />
+      <issuerNameRegistry type="System.IdentityModel.Tokens.ConfigurationBasedIssuerNameRegistry, System.IdentityModel, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+        <trustedIssuers>
+          <add thumbprint="ED08AB32C17D06D3CBE3529CDD6F67BA8265505F" name="http://localhost:1502/STSWebSite/" />
+        </trustedIssuers>
+      </issuerNameRegistry>
+    </identityConfiguration>
+  </system.identityModel>
+  <system.identityModel.services>
+    <federationConfiguration>
+      <cookieHandler requireSsl="false" />
+      <wsFederation passiveRedirectEnabled="true" issuer="http://localhost:1502/STSWebSite/" realm="https://localhost:44301/" requireHttps="false" />
+    </federationConfiguration>
+  </system.identityModel.services>
+  <system.diagnostics configSource="configuration\tracing.config" />
+  <autofac configSource="configuration\autofac.config" />
   <appSettings>
-    <add key="authz:EnableAdmin" value="true"/>
-    <add key="authz:EnableInitialConfiguration" value="true"/>
-    <add key="authz:EnableSelfService" value="true"/>
-    <add key="authz:FilterIncomingClaims" value="true"/>
-    <add key="webpages:Version" value="2.0.0.0"/>
-    <add key="webpages:Enabled" value="false"/>
-    <add key="PreserveLoginUrl" value="true"/>
-    <add key="ClientValidationEnabled" value="true"/>
-    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="authz:EnableAdmin" value="true" />
+    <add key="authz:EnableInitialConfiguration" value="true" />
+    <add key="authz:EnableSelfService" value="true" />
+    <add key="authz:FilterIncomingClaims" value="true" />
+    <add key="webpages:Version" value="2.0.0.0" />
+    <add key="webpages:Enabled" value="false" />
+    <add key="PreserveLoginUrl" value="true" />
+    <add key="ClientValidationEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ida:FederationMetadataLocation" value="http://localhost:1502/STSWebSite/FederationMetadata/2007-06/FederationMetadata.xml" />
+    <add key="ida:Issuer" value="http://localhost:1502/STSWebSite/" />
+    <add key="ida:ProviderSelection" value="productionSTS" />
+    <add key="ida:EnforceIssuerValidation" value="false" />
   </appSettings>
   <connectionStrings>
-    <add name="AuthorizationServerContext" providerName="System.Data.SqlServerCe.4.0"
-      connectionString="Data Source=|DataDirectory|\AuthorizationServerContext.sdf"/>
+    <add name="AuthorizationServerContext" providerName="System.Data.SqlServerCe.4.0" connectionString="Data Source=|DataDirectory|\AuthorizationServerContext.sdf" />
   </connectionStrings>
   <location path="SignOut">
     <system.web>
       <authorization>
-        <allow users="*"/>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
+  <location path="FederationMetadata">
+    <system.web>
+      <authorization>
+        <allow users="*" />
       </authorization>
     </system.web>
   </location>
   <system.web>
-    <authentication mode="None"/>
-    <httpRuntime targetFramework="4.5" requestValidationMode="4.5"/>
-    <compilation debug="true" targetFramework="4.5"/>
+    <!--<authorization>
+      <deny users="?" />
+    </authorization>-->
+    <authentication mode="None" />
+    <httpRuntime targetFramework="4.5" requestValidationMode="4.5" />
+    <compilation debug="true" targetFramework="4.5" />
     <pages>
       <namespaces>
-        <add namespace="System.Web.Helpers"/>
-        <add namespace="System.Web.Mvc"/>
-        <add namespace="System.Web.Mvc.Ajax"/>
-        <add namespace="System.Web.Mvc.Html"/>
-        <add namespace="System.Web.Optimization"/>
-        <add namespace="System.Web.Routing"/>
-        <add namespace="System.Web.WebPages"/>
+        <add namespace="System.Web.Helpers" />
+        <add namespace="System.Web.Mvc" />
+        <add namespace="System.Web.Mvc.Ajax" />
+        <add namespace="System.Web.Mvc.Html" />
+        <add namespace="System.Web.Optimization" />
+        <add namespace="System.Web.Routing" />
+        <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true">
-      <remove name="WebDAVModule"/>
-      <remove name="FormsAuthentication"/>
-      <add name="WSFederationAuthenticationModule"
-        type="System.IdentityModel.Services.WSFederationAuthenticationModule, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-        preCondition="managedHandler"/>
-      <add name="SessionAuthenticationModule"
-        type="System.IdentityModel.Services.SessionAuthenticationModule, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-        preCondition="managedHandler"/>
+      <remove name="WebDAVModule" />
+      <remove name="FormsAuthentication" />
+      <add name="WSFederationAuthenticationModule" type="System.IdentityModel.Services.WSFederationAuthenticationModule, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" preCondition="managedHandler" />
+      <add name="SessionAuthenticationModule" type="System.IdentityModel.Services.SessionAuthenticationModule, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" preCondition="managedHandler" />
     </modules>
     <handlers>
-      <remove name="WebDAV"/>
-      
-      
-      
-      
-    <remove name="ExtensionlessUrlHandler-Integrated-4.0"/><remove name="OPTIONSVerbHandler"/><remove name="TRACEVerbHandler"/><add name="ExtensionlessUrlHandler-Integrated-4.0"
-      path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/></handlers>
+      <remove name="WebDAV" />
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089"/>
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0"/>
+        <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0"/>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-5.1.0.0" newVersion="5.1.0.0"/>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.1.0.0" newVersion="5.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-5.1.0.0" newVersion="5.1.0.0"/>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.1.0.0" newVersion="5.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Razor" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
+        <assemblyIdentity name="System.Web.Razor" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages.Razor" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
+        <assemblyIdentity name="System.Web.WebPages.Razor" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="1.0.0.0-5.1.0.0" newVersion="5.1.0.0"/>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-5.1.0.0" newVersion="5.1.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.data>
     <DbProviderFactories>
-      <remove invariant="System.Data.SqlServerCe.4.0"/>
-      <add name="Microsoft SQL Server Compact Data Provider 4.0" invariant="System.Data.SqlServerCe.4.0"
-        description=".NET Framework Data Provider for Microsoft SQL Server Compact"
-        type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>
+      <remove invariant="System.Data.SqlServerCe.4.0" />
+      <add name="Microsoft SQL Server Compact Data Provider 4.0" invariant="System.Data.SqlServerCe.4.0" description=".NET Framework Data Provider for Microsoft SQL Server Compact" type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     </DbProviderFactories>
   </system.data>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlCeConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="System.Data.SqlServerCe.4.0"/>
+        <parameter value="System.Data.SqlServerCe.4.0" />
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
-      <provider invariantName="System.Data.SqlServerCe.4.0" type="System.Data.Entity.SqlServerCompact.SqlCeProviderServices, EntityFramework.SqlServerCompact"/>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlServerCe.4.0" type="System.Data.Entity.SqlServerCompact.SqlCeProviderServices, EntityFramework.SqlServerCompact" />
     </providers>
   </entityFramework>
 </configuration>
