--- a/source/WebHost/WebHost.csproj
+++ b/source/WebHost/WebHost.csproj
@@ -182,12 +182,16 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
+    <Compile Include="Areas\Admin\Api\ApplicationRememberOptionsController.cs" />
     <Compile Include="Areas\Admin\Api\ApplicationsController.cs" />
     <Compile Include="Areas\Admin\Api\ClientsController.cs" />
     <Compile Include="Areas\Admin\Api\ClientRedirectsController.cs" />
     <Compile Include="Areas\Admin\Api\ApplicationScopesController.cs" />
     <Compile Include="Areas\Admin\Api\CertificatesController.cs" />
+    <Compile Include="Areas\Admin\Api\RememberOptionsController.cs" />
     <Compile Include="Areas\Admin\Api\Utility\ModelStateDictionaryExtensions.cs" />
+    <Compile Include="Areas\Admin\Api\Utility\RememberOptionParser.cs" />
+    <Compile Include="Areas\Admin\Api\Utility\RememberOptionsDefaultData.cs" />
     <Compile Include="Areas\Admin\Api\Utility\X509CertificateReferenceFormatter.cs" />
     <Compile Include="Areas\Admin\Api\X509KeysController.cs" />
     <Compile Include="Areas\Admin\Api\SymmetricKeysController.cs" />
@@ -206,6 +210,7 @@
     <Compile Include="Areas\Admin\Models\ApplicationModel.cs" />
     <Compile Include="Areas\Admin\Models\ClientModel.cs" />
     <Compile Include="Areas\Admin\Models\ClientRedirectModel.cs" />
+    <Compile Include="Areas\Admin\Models\RememberOptionModel.cs" />
     <Compile Include="Areas\Admin\Models\X509KeyModel.cs" />
     <Compile Include="Areas\Admin\Models\GlobalViewModel.cs" />
     <Compile Include="Areas\Admin\Models\SymmetricKeyModel.cs" />
@@ -246,6 +251,8 @@
     <Content Include="Areas\Admin\Scripts\Client.js" />
     <Content Include="Areas\Admin\Scripts\ClientRedirects.js" />
     <Content Include="Areas\Admin\Scripts\Application.js" />
+    <Content Include="Areas\Admin\Scripts\RememberOption.js" />
+    <Content Include="Areas\Admin\Scripts\RememberOptions.js" />
     <Content Include="Areas\Admin\Scripts\X509Key.js" />
     <Content Include="Areas\Admin\Scripts\SymmetricKey.js" />
     <Content Include="Areas\Admin\Scripts\Tokens.js" />
@@ -301,6 +308,8 @@
     <Content Include="Areas\UserApplications\Content\UserApplications.less" />
     <Content Include="Areas\UserApplications\Views\Shared\Nav.cshtml" />
     <Content Include="Areas\Admin\Views\Key\X509Key.cshtml" />
+    <Content Include="Areas\Admin\Views\Application\RememberOptions.cshtml" />
+    <Content Include="Areas\Admin\Views\Application\RememberOption.cshtml" />
     <None Include="Content\Site.less" />
     <Content Include="Configuration\identityModel.config" />
     <Content Include="Configuration\identityModel.services.config" />
